Update header alignment

--- a/css/app.css
+++ b/css/app.css
@@ -49,7 +49,7 @@ p {
     background-image: url('../img/headerimage.jpg');
     background-position: 50% 75%;
     background-size: cover;
-    text-align: center;
+    text-align: left;
     padding: 1em;
     margin-bottom: 2rem;
     min-height: 25vh;
